--- a/Tests/StyleguideTests/__Snapshots__/StyleguideTests/testPointFreeStyles.pretty.css
+++ b/Tests/StyleguideTests/__Snapshots__/StyleguideTests/testPointFreeStyles.pretty.css
@@ -50,6 +50,10 @@ body {
   background-color : #a8a8a8;
 }
 
+.bg-gray850 {
+  background-color : #d8d8d8;
+}
+
 .bg-gray900 {
   background-color : #f6f6f6;
 }
