--- a/Tests/StyleguideTests/__Snapshots__/StyleguideTests/testStyleguide.pretty.css
+++ b/Tests/StyleguideTests/__Snapshots__/StyleguideTests/testStyleguide.pretty.css
@@ -219,9 +219,13 @@ a:visited.pf-link-yellow {
 }
 
 .code {
-  background-color : #fafafa;
-  color            : #24292e;
-  font-family      : monospace;
+  background-color    : rgba(0,0,0,0.02);
+  border-top-color    : rgba(0,0,0,0.15);
+  border-right-color  : rgba(0,0,0,0.15);
+  border-bottom-color : rgba(0,0,0,0.15);
+  border-left-color   : rgba(0,0,0,0.15);
+  color               : #24292e;
+  font-family         : monospace;
 }
 
 .inline-code {
@@ -239,7 +243,7 @@ a:visited.pf-link-yellow {
   border-top-right-radius    : 3px;
   border-bottom-right-radius : 3px;
   border-bottom-left-radius  : 3px;
-  background-color           : #fafafa;
+  background-color           : rgba(0,0,0,0.02);
 }
 
 .opacity-25 {
